--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.7.0",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
@@ -19,6 +25,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": [
     ">0.2%",
